welcome.lessons.welcome.methods.slug.SlugTracking.scala.code

def isFacingTrail():Boolean =
{

	if(estFaceMur)
	{
	return false
	}

		while(!estFaceMur())
		{
			avance()
			if(getCouleurSol()==Color.green)
			{
				recule()
				return false
				
			}
				else
				{
				recule()
				return true
				}
		}
}
		
